feat: media - taxonomy and menus

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "MonkeysCloud",
-            "email": "dev@monkeyscloud.com"
+            "name": "Jorge Peraza",
+            "email": "jorge@monkeys.cloud"
         }
     ],
     "keywords": ["cms", "content-management", "monkeyslegion", "php", "framework"],
